syntax = "proto3";
import "google/api/annotations.proto";
option go_package = "github.com/RTUITLab/Civfrovoi-Proriv-Back/protos;coordservice";
message WriteCoordsReq {
    string id   = 1;
    double lat  = 2;
    double long = 3;
};

message Empty{};

message WriteCoordsResp {
};

message GetCoordsReq {
    repeated string ids = 1;
};

message GetCoordsResp {
    repeated UnitWithCords coords = 1;
};

message UpdateUnitsReq {
};

message UpdateUnitsResp {
    repeated Coordinates coords = 1;
};

enum Resuource {
    TRUCK                       = 0;
    ECAVATOR                    = 1;
    ROTARY_LOADER               = 2;
    PLOW_AND_BRUSH_MACHINE      = 3;
    PLOW_AND_BRUSH_MACHINE_REG  = 4;
    HUMAN                       = 5;
    DISPETCHER                  = 6;
};

message Coordinates {
    string dt       = 1;
    string id       = 2;
    Resuource type  = 3;
    double lat      = 4;
    double long     = 5;
};

message Units {
    repeated string ids = 1;
};

message Coords {
    double lat      = 1;
    double long     = 2;
};

message OpeataionOn {
    Units units = 1;
    Coords coords = 2;
};

message OperationFromTo {
    Units units = 1;
    Coords from = 2;
    Coords to   = 3;
};

message Unit{
    string id = 1;
};

message UnitWithCords {
    string id = 1;
    Coords coords = 2;
}

message Operaions {
    Coords from             = 1;
    Coords to               = 2;
    string operation_name   = 3;
};

message ID {
    string id = 1;
};

message InitReq {
    Resuource type = 1;
};

message Task {
    Coords on = 1;
    string operation_name   = 2;
};

message Tasks {
    repeated Task tasks = 1;
};

service CoordsService {
    rpc WriteCoords (WriteCoordsReq)        returns         (WriteCoordsResp);
    // For unity
    rpc GetCoords   (Units)                 returns         (stream GetCoordsResp){
        option (google.api.http) = {
                get: "/coords"
            };
    };
    // For unity
    rpc UpdateUnits (UpdateUnitsReq)        returns         (UpdateUnitsResp);
    // For unity
    rpc SweepingUp  (OpeataionOn)           returns         (Empty);
    // For unity
    rpc ReagentTreatment (OpeataionOn)      returns         (Empty);
    // For unity
    rpc ShaftFormation (OpeataionOn)        returns         (Empty);
    // For unity
    rpc MoveSnowToTemp(OperationFromTo)     returns         (Empty);
    // For unity
    rpc LoadingSnowFromTemp(OpeataionOn)    returns         (Empty);
    // For unity
    rpc ExportSnowFromTemp(OperationFromTo) returns         (Empty);
    // For unity
    rpc ClearTemp(OpeataionOn)              returns         (Empty);
    // For unity
    rpc ListenCommands(Unit)                returns         (stream Operaions);
    // For unity
    rpc InitApp(InitReq)                    returns         (ID);
    rpc OpenTask(Task)                      returns         (Empty);
    // For unity
    rpc GetTask(Empty)                      returns         (Tasks);
};